# uparse

./: .gitignore  README.md  build.ninja  meson.build
include/uparse/: uparse.hpp
test/: meson.build  test.cpp
